--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Alex Albaran | Portfolio</title>
 </head>
 <body>
+    <div class="main-container">
+        <div class="box"></div>
+        <div class="triangle"></div>
+    
+    </div>
     
 </body>
 </html>
