added loading page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
     <div class="main-container">
         <div class="box"></div>
-        <div class="triangle"></div>
-    
+        <div class="loading">
+            <span><img src="./img/loading.gif" alt=""></span>
+            <span><p>LOADING</p></span>
+        </div>
+
     </div>
     
 </body>
