--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
         </div>
 
         <div class="box3">
-            <div><i class="fa fa-camera-retro"></i></div>
+            <div><p><i class="fas fa-chevron-down"></i></p></div>
         </div>
 
         <div class="box4">
+            <div><i class="fas fa-chevron-down"></i></div>
+            <div>SOCIAL</div>
             <div>SOCIAL</div>
         </div>
         
