added viewbox for projects

--- a/index.html
+++ b/index.html
@@ -79,23 +79,23 @@
 
             <div class="project-list">
                 <ul>
-                    <li><a href="#"> Pricing Panel Project</a></li>
+                    <li><a id="price-panel" href="javascript:" onclick="changeImg('./img/price-panel.png');"> Pricing Panel Project</a></li>
                         <div class="border">
                         <div class ="bullet"></div><div class="line"></div>
                         </div>
-                    <li><a href="#">Wall App Gallery</a></li>
+                    <li><a id="wall-app" href="javascript:" onclick="changeImg('./img/wall-app.png');">Wall App Gallery</a></li>
                         <div class="border">
                             <div class ="bullet"></div><div class="line"></div>
                         </div>
-                    <li><a href="#">Periodic Table of Elements</a></li>
+                    <li><a id="periodic-table" href="javascript:" onclick="changeImg('./img/periodic-table.png');">Periodic Table of Elements</a></li>
                         <div class="border">
                             <div class ="bullet"></div><div class="line"></div>
                         </div>
-                    <li><a href="#">Mobile App</a></li>
+                    <li><a id="mobile-app" href="javascript:" onclick="changeImg('./img/mobile-app.png');">Mobile App</a></li>
                         <div class="border">
                             <div class ="bullet"></div><div class="line"></div>
                         </div>
-                    <li><a href="#">Log in Panel</a></li>
+                    <li><a id="log-in-panel" href="javascript:" onclick="changeImg('./img/log-in-panel.png');">Log in Panel</a></li>
                         <div class="border">
                             <div class ="bullet"></div><div class="line"></div>
                         </div>
@@ -104,7 +104,7 @@
                 </div>
                 
                 <div class = view-box>
-                    <div>VIEW BOX</div>
+                    <div class="imageholder"><img id="imageHolder"/></div>
                 </div>
         </div>
 
