--- a/index.html
+++ b/index.html
@@ -122,14 +122,16 @@
     </div> 
         <div id="my-form" class = "collapse-form">
                 <div><a href="javascript:void(0)" class="closebtn" onclick="closeForm()">&times;</a></div>
-                <div>
+                <div class = "form-field">
                     <h2>Submit A Form</h2>
-                    <form action="/action_page.php">
-                      <label for="fname">First name:</label><br>
-                      <input type="text" id="fname" name="fname" value="John"><br>
-                      <label for="lname">Last name:</label><br>
-                      <input type="text" id="lname" name="lname" value="Doe"><br><br>
-                      <input type="submit" value="Submit">
+                    <form action="#">
+                      <label for="fname">Name</label><br>
+                      <input type="text" id="fname" name="fname" value="John Doe"><br>
+                      <label for="lname">Email</label><br>
+                      <input type="text" id="lname" name="lname" value="john-doe@google.com" required><br>
+                      <label for="message">Message</label><br>
+                      <input type="text" id="contact-message" name="message" value="How can i help you? :)"><br><br>
+                      <button> SUBMIT </button>
                     </form> 
                     <p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
                 </div>
