updated collapsable form on content section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                       <label for="lname">Email</label><br>
                       <input type="text" id="lname" name="lname" value="john-doe@google.com" required><br>
                       <label for="message">Message</label><br>
-                      <input type="text" id="contact-message" name="message" value="How can i help you? :)"><br><br>
+                      <textarea class = "message-text" placeholder="What's on your mind?"></textarea><br><br>
                       <button> SUBMIT </button>
                     </form> 
                 </div>
